# petrel

./: Cargo.toml  README.md  options.lua
src/: dictionary.rs  generator.rs  global.rs  main.rs  message_generator.rs  options.rs  runner.rs  scenario.rs
