[package]
name = "petrel"
version = "0.1.0"
edition = "2021"
authors = ["Jason Lee<lwlee2608@gmail.com>"]
description = "Diameter Load generator"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
diameter = "0.7.1"

log = "0.4"
env_logger = "0.9"
futures = "0.3"
chrono = "0.4"
regex = "1"
rand = "0.8"
url = "2.2.2"
reqwest = { version = "0.11", features = ["blocking"] }

serde = { version = "1.0", features = ["derive"] }
mlua = { version = "0.9.5", features = ["lua54", "vendored", "serialize"] }
humantime = "2.1.0"

uuid = { version = "1", features = ["v4"] }
